Add level in sections, Pouchdb download`

--- a/sheet.html
+++ b/sheet.html
@@ -6,14 +6,23 @@
     <script src="modules.js"></script>
 </head>
 <body>
-    <section id="stats">
-    </section>
-    <section id="hits">
-    </section>
-    <section id="skills">
+    <section id="character">
+        <section id="info">
+        </section>
+        <section id="stats">
+        </section>
+        <section id="body">
+        </section>
+        <section id="skills">
+        </section>
+        <section id="equipment">
+        </section>
+        <section id="weapons">
+        </section>
     </section>
     <section id="player">
     </section>
+<script src="http://download.pouchdb.com/pouchdb-nightly.min.js"></script>
 <script>
 (function () {
     "use strict";
