--- a/sheet.html
+++ b/sheet.html
@@ -46,4 +46,4 @@
     Affero GNU General Public License for more details.
 
     You should have received a copy of the Affero GNU General Public License
-    along with Foobar.  If not, see <http://www.gnu.org/licenses/>.-->
+    along with EemcoRPG.  If not, see <http://www.gnu.org/licenses/>.-->
