Added pouchdb and pouchdb-main to sheet.html

--- a/sheet.html
+++ b/sheet.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <script src="http://download.pouchdb.com/pouchdb-nightly.js"></script>
     <script src="modules.js"></script>
 </head>
 <body>
@@ -21,11 +22,12 @@
         </section>
     </section>
     <section id="player">
+        No information found. Still searching for more.
     </section>
 <script>
 (function () {
     "use strict";
-    var main = require("lib/main");
+    var main = require("lib/main.pouch");
     main();
 }());
 </script>
