--- a/select.html
+++ b/select.html
@@ -3,8 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <script src="http://download.pouchdb.com/pouchdb-nightly.js"></script>
-    <script src="modules.js"></script>
+    <script src="//cdn.jsdelivr.net/pouchdb/2.2.3/pouchdb.min.js"></script>
 </head>
 <body>
     <section>
