--- a/select.html
+++ b/select.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <script src="//cdn.jsdelivr.net/pouchdb/2.2.3/pouchdb.min.js"></script>
+    <script data-main="selectapp" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.min.js"></script>
 </head>
 <body>
     <section>
@@ -14,16 +15,9 @@
             <option>Loading</option>
         </select>
     </section>
-<script src="select.js"></script>
-<script>
-(function () {
-    "use strict";
-    select.start(document.getElementById("players"), document.getElementById("characters"));
-}());
-</script>
 </body>
 </html>
-<!-- Copyright 2013 Pieter van der Eems -->
+<!-- Copyright 2014 Pieter van der Eems -->
 <!-- This file is part of EemcoRPG
 
     EemcoRPG is free software: you can redistribute it and/or modify
